--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -56,7 +56,7 @@
             <hr>
             <div class="info-line net">
               <span class="details-header">Net (USD):</span>
-              <span class="total details-header">{{feature.estimated_amount | currency:'USD'}}</span>
+              <span class="total details-header">{{feature.net_price | currency:'USD'}}</span>
             </div>
             <div class="description-text">Taxes, shipping & handling not included</div>
           </div>
