--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -57,7 +57,7 @@
                 <hr>
                 <div class="info-line net">
                   <span class="details-header">Net (USD):</span>
-                  <span class="total details-header">{{seeyond.estimated_amount | currency:'USD'}}</span>
+                  <span class="total details-header">{{seeyond.net_price | currency:'USD'}}</span>
                 </div>
                 <div class="description-text">Taxes, shipping & handling not included</div>
               </div>
