--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -179,7 +179,7 @@
               <hr>
               <div class="total-row">
                 <span class="sub-header">Net (USD):</span>
-                <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
+                <span class="total">{{feature.net_price | currency:'USD'}}</span>
               </div>
             </span>
           <!-- <span class="est-total-text">
