--- a/src/app/quote-dialog/quote-dialog.component.html
+++ b/src/app/quote-dialog/quote-dialog.component.html
@@ -76,7 +76,7 @@
             <hr>
             <div class="info-line">
               <span class="sub-header">Net (USD):</span>
-              <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
+              <span class="total">{{feature.net_price | currency:'USD'}}</span>
             </div>
             <div class="description-text">Taxes, shipping & handling not included</div>
           </div>
@@ -96,7 +96,7 @@
             <hr>
             <div class="info-line">
               <span class="sub-header">Net (USD):</span>
-              <span class="total">{{seeyond.estimated_amount | currency:'USD'}}</span>
+              <span class="total">{{seeyond.net_price | currency:'USD'}}</span>
             </div>
             <div class="description-text">Taxes, shipping & handling not included</div>
           </div>
