hush blocks quantity material column adjustments

--- a/src/app/details/quantity-details/quantity-details.component.html
+++ b/src/app/details/quantity-details/quantity-details.component.html
@@ -132,7 +132,7 @@
                   alt="{{element.material.name_str | capitalize}}">
               </span>
               <span>
-                  {{element.material | capitalize}} - {{element.material_size}}
+                  {{element.material | capitalize}} - {{element.humanized_size}}
               </span>
             </mat-cell>
           </ng-container>
