adjustments to load / save

--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -5,10 +5,8 @@
         <span class="project-name">{{feature.design_name || seeyond.design_name}}</span>
         <span class="save-load save-load-btn-fmt">
           <img src="/assets/icons/tools/load.png" alt="load icon">
-          <a title="save design" (click)="saveDesign()">
-            <span class="sub-header" *ngIf="user.isLoggedIn()">Save</span>
-            <span class="sub-header" *ngIf="!user.isLoggedIn()">Login to Save</span>
-          </a> |
+          <a class="sub-header" title="save design" *ngIf="!user.isLoggedIn()" (click)="loginDialog()">Login to Save</a>
+          <a class="sub-header" title="save design" *ngIf="user.isLoggedIn()" (click)="saveDesign()">Save</a> |
           <a class="sub-header" title="load saved designs" (click)="loadDesigns()">Load</a>
         </span>
       </div>
@@ -79,7 +77,7 @@
             <span class="total">{{feature.net_price | currency:'USD'}}</span>
           </div>
         </span>
-        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && seeyond.showPricing" >
+        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && feature.showPricing" >
           <div class="total-row">
             <span class="sub-header">List:</span>
             <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
