--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -14,10 +14,12 @@
         </span>
         <span class="save-load save-load-btn-fmt">
           <img src="/assets/icons/tools/load.png" alt="load icon">
-          <a title="save design" (click)="loginDialog()" *ngIf="!user.isLoggedIn()" [ngClass]="{'span-disabled': ((order.data.length === 0) || !feature.design_name)}">
+          <a title="save design" (click)="loginDialog()" *ngIf="!user.isLoggedIn()"
+            [ngClass]="{'span-disabled': ((order.data.length === 0) || !feature.design_name)}">
             <span class="sub-header">Login to Save</span>
-          </a> |
-          <a title="save design" (click)="saveQuantity()" *ngIf="user.isLoggedIn()" [ngClass]="{'span-disabled': ((order.data.length === 0) || !feature.design_name)}">
+          </a>
+          <a title="save design" (click)="saveQuantity()" *ngIf="user.isLoggedIn()"
+            [ngClass]="{'span-disabled': ((order.data.length === 0) || !feature.design_name)}">
             <span class="sub-header">Save</span>
           </a> |
           <a class="sub-header" title="load saved quantity" (click)="loadQuantity()">Load</a>
@@ -115,8 +117,9 @@
                   <span>
                     <img *ngIf="element.tile.tile !== 'chroma'" src="{{element.image}}" class="table-img"
                       alt="{{element.material.name_str | capitalize}}">
-                    <img *ngIf="element.tile.tile === 'chroma'" src="/assets/images/profile/swoon/swoon-chroma-blank.png"
-                      class="table-img" [style.backgroundColor]="element.image">
+                    <img *ngIf="element.tile.tile === 'chroma'"
+                      src="/assets/images/profile/swoon/swoon-chroma-blank.png" class="table-img"
+                      [style.backgroundColor]="element.image">
                   </span>
                   <span>
                     {{element.material | capitalize}} - {{element.material_type}}
@@ -130,10 +133,10 @@
                   <span>
                     <img src="{{element.image}}" class="img-responsive table-img rotate-90"
                       alt="{{element.material.name_str | capitalize}}">
-                    </span>
-                    <span>
-                        {{element.material | capitalize}} - {{element.humanized_size}}
-                    </span>
+                  </span>
+                  <span>
+                    {{element.material | capitalize}} - {{element.humanized_size}}
+                  </span>
                 </mat-cell>
               </ng-container>
 
@@ -171,25 +174,25 @@
           <span appStyledButton='primary-right' *ngIf="feature.quoted">
             <button (click)="viewDetails()">View Details</button>
           </span>
-          <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond' && feature.showPricing" >
-              <div class="total-row">
-                <span class="sub-header">List:</span>
-                <span  class="total">{{feature.list_price | currency:'USD'}}</span>
-              </div>
-              <div class="total-row">
-                <span class="sub-header">Discount:</span>
-                <span class="total">{{feature.discount_terms_string}}</span>
-              </div>
-              <div class="total-row">
-                <span class="sub-header">Discount amount:</span>
-                <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
-              </div>
-              <hr>
-              <div class="total-row">
-                <span class="sub-header">Net (USD):</span>
-                <span class="total">{{feature.net_price | currency:'USD'}}</span>
-              </div>
-            </span>
+          <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond' && feature.showPricing">
+            <div class="total-row">
+              <span class="sub-header">List:</span>
+              <span class="total">{{feature.list_price | currency:'USD'}}</span>
+            </div>
+            <div class="total-row">
+              <span class="sub-header">Discount:</span>
+              <span class="total">{{feature.discount_terms_string}}</span>
+            </div>
+            <div class="total-row">
+              <span class="sub-header">Discount amount:</span>
+              <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
+            </div>
+            <hr>
+            <div class="total-row">
+              <span class="sub-header">Net (USD):</span>
+              <span class="total">{{feature.net_price | currency:'USD'}}</span>
+            </div>
+          </span>
           <!-- <span class="est-total-text">
             <span>Est. Total:</span>
             <span>{{feature.estimated_amount | currency:'USD'}} USD</span>
