--- a/src/app/details/quantity-details/quantity-details.component.html
+++ b/src/app/details/quantity-details/quantity-details.component.html
@@ -42,7 +42,7 @@
           <div id="estimated-totals" class="info-section">
             <div class="info-line">
               <span>List:</span>
-              <span  class="total">{{feature.list_price | currency:'USD'}}</span>
+              <span class="total">{{feature.list_price | currency:'USD'}}</span>
             </div>
             <div class="info-line">
               <span>Discount:</span>
@@ -115,11 +115,11 @@
             <mat-header-cell *matHeaderCellDef> Material </mat-header-cell>
             <mat-cell *matCellDef="let element" class="material-column">
               <span>
-                <img src="{{element.image}}" [ngClass]="{'rotate-90': element.tile === '24'}" class="img-responsive table-img"
-                  alt="{{element.material.name_str | capitalize}}">
+                <img src="{{element.image}}" [ngClass]="{'rotate-90': element.tile === '24'}"
+                  class="img-responsive table-img" alt="{{element.material.name_str | capitalize}}">
               </span>
               <span>
-                  {{element.material | capitalize}} - {{element.material_size}}
+                {{element.material | capitalize}} - {{element.material_size}}
               </span>
             </mat-cell>
           </ng-container>
@@ -132,7 +132,7 @@
                   alt="{{element.material.name_str | capitalize}}">
               </span>
               <span>
-                  {{element.material | capitalize}} - {{element.humanized_size}}
+                {{element.material | capitalize}} - {{element.humanized_size}}
               </span>
             </mat-cell>
           </ng-container>
@@ -156,70 +156,3 @@
     <img src="//3form.s3.amazonaws.com/images/navigation/3form_logo.svg" alt="3form">
   </div>
 </div>
-<!--
-
-<div class="row">
-  <div class="col-sm-2">
-    <a class="hidden-print back-to-design" (click)="backToDesign()">
-      <span class="icomoon-chevron-left orange"></span>Back to Order</a>
-  </div>
-</div>
-<div class="row header">
-  <div class="col-sm-12">
-    <div class="row">
-      <div class="col-sm-6">
-        <p class="sm">Project:
-          <span class="md info">{{feature.project_name}}</span>
-        </p>
-      </div>
-      <div class="col-sm-5">
-        <p class="sm">Feature:
-          <span class="md info">{{feature.feature_type | capitalize}} - ID: {{feature.id}}</span>
-        </p>
-      </div>
-      <div class="col-sm-1 hidden-print">
-        <p class="sm bold print" (click)="print()">
-          <span class="icomoon-print orange"></span> Print</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <p class="sm">Specifier:
-          <span class="md info">{{feature.specifier}}</span>
-        </p>
-      </div>
-      <div class="col-sm-5">
-        <p class="sm">Order Total:
-          <span class="md info">{{feature.estimated_amount | currency:'USD'}}
-            <sup>*</sup> USD</span>
-        </p>
-      </div>
-      <div class="col-sm-1">
-        <p class="xs bold">{{feature.updated_at | date:'shortDate'}}</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<hr>
-
-
-
-<div class="footer">
-  <div class="logo">
-    <img src="//3form.s3.amazonaws.com/images/navigation/3form_logo.svg" alt="3form">
-  </div>
-  <div *ngIf="rep">
-    <p class="rep-name">
-      <span class="bold">{{rep.name}}</span> Sales Rep</p>
-    <p class="rep-info">{{rep.phone}} | {{rep.email}}</p>
-  </div>
-  <div class="">
-    <p class="">
-      <sup>*</sup>Taxes, Shipping and Handling not included</p>
-  </div>
-  <div class="">
-    <p class="orange pull-right">3-form.com</p>
-  </div>
-</div> -->
