--- a/src/app/quantity/quantity-options/quantity-options.component.html
+++ b/src/app/quantity/quantity-options/quantity-options.component.html
@@ -34,7 +34,8 @@
         <div class="input">
           <div class="sub-header">Ceiling Grid Type</div>
           <span appStyledSelect [width]="280">
-            <select (change)="clarioGridSizeChanged($event.target.value)" id="gridOptions" [(ngModel)]="feature.grid_type">
+            <select (change)="clarioGridSizeChanged($event.target.value)" id="gridOptions"
+              [(ngModel)]="feature.grid_type">
               <option [value]="'15/16'">15/16" (24mm)</option>
               <option [value]="'9/16'">9/16"</option>
             </select>
@@ -44,8 +45,10 @@
           <div class="sub-header">Tile Size</div>
           <span appStyledSelect [width]="280">
             <select (change)="clarioTileSizeChanged($event.target.value)" id="gridOptions">
-              <option disabled [value]="undefined" [selected]="clarioGrids.selectedTileSize === undefined">-- select --</option>
-              <option *ngFor="let gridOption of clarioGrids.tileSizeOptions | keys" [value]="gridOption.name" [selected]="clarioGrids.selectedTileSize?.name === gridOption.name">{{gridOption.name}}</option>
+              <option disabled [value]="undefined" [selected]="clarioGrids.selectedTileSize === undefined">-- select --
+              </option>
+              <option *ngFor="let gridOption of clarioGrids.tileSizeOptions | keys" [value]="gridOption.name"
+                [selected]="clarioGrids.selectedTileSize?.name === gridOption.name">{{gridOption.name}}</option>
             </select>
           </span>
         </div>
@@ -54,66 +57,8 @@
   </div>
   <div class="qty-options-footer">
     <span appStyledButton='primary-right'>
-      <button type="submit" (click)="dialogRef.close('start designing')" class="start-designing" [disabled]="!validateOptions()">Next</button>
+      <button type="submit" (click)="dialogRef.close('start designing')" class="start-designing"
+        [disabled]="!validateOptions()">Next</button>
     </span>
   </div>
 </div>
-
-
-<!-- <div class="quantity-options">
-  <div class="row">
-    <div class="col-xs-11">
-      <div class="intro">
-        <h2>{{title | capitalize}}</h2>
-      </div>
-    </div>
-  </div>
-  <div class="row col-sm-12">
-    <div class="row">
-      <div class="col-sm-12">
-        <p>Already know your design? Simply order the number of tiles you need.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <h3>Quantity Order Name</h3>
-      </div>
-      <div class="col-sm-7">
-        <div class="form-group">
-          <input [(ngModel)]="feature.design_name" type="text" class="form-control square" placeholder="Name" name="design-name" id="design-name-input"
-            autofocus>
-        </div>
-      </div>
-      <div class="col-sm-3 options-load">
-        <a id="load-btn" title="load saved designs" (click)="feature.loadDesigns()">
-          <span class="icomoon-folder orange"></span> Load</a>
-      </div>
-    </div>
-    <div *ngIf="feature.feature_type === 'clario'">
-      <hr>
-      <h3>Grid and Tile Size</h3>
-      <p>Select your ceiling grid type and tile size.</p>
-      <div class="row">
-        <div class="col-sm-7 grid-dimensions">
-          <label for="gridOptions">Ceiling Grid Type</label>
-          <select class="form-control" (change)="gridSizeChanged($event.target.value)" id="gridOptions" [(ngModel)]="feature.grid_type">
-            <option [value]="'15/16'">15/16" (24mm)</option>
-            <option [value]="'9/16'">9/16"</option>
-          </select>
-        </div>
-        <div class="col-sm-7 grid-dimensions">
-          <label for="gridOptions">Tile Sizes</label>
-          <select class="form-control" (change)="tileSizeChanged($event.target.value)" id="gridOptions">
-            <option disabled [value]="undefined" [selected]="clarioGrids.selectedTileSize === undefined">-- select --</option>
-            <option *ngFor="let gridOption of clarioGrids.tileSizeOptions | keys" [value]="gridOption.name" [selected]="clarioGrids.selectedTileSize?.name === gridOption.name">{{gridOption.name}}</option>
-          </select>
-        </div>
-      </div>
-    </div>
-    <button class="button button-orange start-designing" (click)="dialogRef.close('start designing')" [disabled]="!validateOptions()">Next</button>
-    <div class="back">
-      <a id="back-to-landing" class="back-to-landing" (click)="goToLanding()">
-        < Choose a Different Tool</a>
-    </div>
-  </div>
-</div> -->
