--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -174,7 +174,7 @@
           <span appStyledButton='primary-right' *ngIf="feature.quoted">
             <button (click)="viewDetails()">View Details</button>
           </span>
-          <span class="est-totals" *ngIf="!feature.legacyPricing && feature.showPricing">
+          <span class="est-totals" *ngIf="feature.showPricing">
             <div class="total-row">
               <span class="sub-header">List:</span>
               <span class="total">{{feature.list_price | currency:'USD'}}</span>
@@ -192,10 +192,6 @@
               <span class="sub-header">Net (USD):</span>
               <span class="total">{{feature.net_price | currency:'USD'}}</span>
             </div>
-          </span>
-          <span class="est-total-text" *ngIf="feature.legacyPricing">
-            <span>Est. Total:</span>
-            <span>{{feature.estimated_amount | currency:'USD'}} USD</span>
           </span>
         </div>
       </div>
