--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -14,8 +14,7 @@
         </span>
         <span class="save-load save-load-btn-fmt">
           <img src="/assets/icons/tools/load.png" alt="load icon">
-          <a title="save design" (click)="loginDialog()" *ngIf="!user.isLoggedIn()"
-            [ngClass]="{'span-disabled': ((order.data.length === 0) || !feature.design_name)}">
+          <a title="save design" (click)="loginDialog()" *ngIf="!user.isLoggedIn()">
             <span class="sub-header">Login to Save</span>
           </a>
           <a title="save design" (click)="saveQuantity()" *ngIf="user.isLoggedIn()"
