Seeyond form validation for quoted designs

--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -26,11 +26,11 @@
                 <span class="orange-bold">Specifier</span>
                 <span>{{design.specifier}}</span>
               </div>
-              <div>
-                <span class="orange-bold">Date</span>
+              <!-- <div> -->
+                <!-- <span class="orange-bold">Date</span> -->
                 <!-- TODO: GET THE DATE TO DISPLAY IT -->
-                <span>{{design.updated_at | date:'shortDate'}}</span>
-              </div>
+                <!-- <span>{{design.updated_at | date:'shortDate'}}</span> -->
+              <!-- </div> -->
             </div>
             <div class="right" *ngIf="!!rep">
               <div class="orange-bold">Sales Representative</div>
