--- a/src/app/details/quantity-details/quantity-details.component.html
+++ b/src/app/details/quantity-details/quantity-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isSeeyond" class="details-ui">
+<div class="details-ui">
   <div class="top-section">
     <div class="top-section-header">
       <span class="project-name">
