--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!!design">
-  <div *ngIf="isSeeyond" class="details-ui">
+  <div class="details-ui">
     <div class="top-section">
       <div class="top-section-header">
         <span class="project-name">
