--- a/src/app/load-design/load-design.component.html
+++ b/src/app/load-design/load-design.component.html
@@ -4,7 +4,7 @@
     <div class="modals-header">
       <span>Load your design</span>
     </div>
-    <div class="modals-inputs" *ngIf="!saving">
+    <div class="modals-inputs">
       <div class="input-line designs-table">
         <span *ngIf="!designs.length" class="sub-header">Looks like you don't have any saved designs.</span>
         <table *ngIf="designs.length" class="">
