--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -60,7 +60,7 @@
   background-position: 50%;
 }
 
-#hush-swoon {
+#clario-cloud {
   background: radial-gradient(circle at bottom left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url(/assets/images/features/hush-swoon.jpg);
   background-size: cover;
   background-position: 50%;
