--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -71,7 +71,7 @@
   <div class="col-sm-6">
     <div class="feature" id="clario-cloud">
       <div class="content text-center">
-        <p class="lg">Hush Swoon</p>
+        <p class="lg">Clario Cloud</p>
         <div class="buttons">
           <button class="button button-transparent orange" (click)="goTo('clario-cloud')">Design Your Feature</button>
         </div>
