rotating cloud direction

--- a/src/app/design/right-components/design-modify/design-modify.component.html
+++ b/src/app/design/right-components/design-modify/design-modify.component.html
@@ -25,9 +25,9 @@
       </span>
       <span class="description-text">Remove</span>
     </span>
-    <span (click)="feature.updateSelectedTool('rotate-cloud')" class="tool-container spacer-left">
-      <span class="expansion-panel-section-header">Cloud</span>
-      <span class="tool" [class.selected]="feature.selectedTool=='rotate-cloud'">
+    <span (click)="feature.updateSelectedTool('rotate-clario-cloud')" class="tool-container spacer-left">
+      <span class="expansion-panel-section-header">Field</span>
+      <span class="tool">
         <img src="/assets/icons/tools/rotate.png" alt="Rotate Cloud Pattern Direction">
       </span>
       <span class="description-text wrap-text">Rotate Pattern Direction</span>
