--- a/src/app/options/options-right-clario-cloud/options-right-clario-cloud.component.html
+++ b/src/app/options/options-right-clario-cloud/options-right-clario-cloud.component.html
@@ -1,3 +1,24 @@
-<p>
-  options-right-clario-cloud works!
-</p>
+<div class="right-section">
+  <div class="subtitle">Cloud Size</div>
+  <div class="description">Tile dimensions are 48" x 48"
+    <br> (121.92cm x 121.92cm)</div>
+  <div class="images grid-and-guide">
+    <img src="/assets/images/clario_cloud/clario-cloud-tile-size.png" alt="Clario Cloud Size. 48 inches by 48 inches.">
+  </div>
+</div>
+
+<div class="right-section">
+  <div class="subtitle">Design</div>
+  <div class="description">Choose your cloud and color.</div>
+  <div class="colors">
+    <img class="tile-type" src="/assets/images/clario_cloud/clario-cloud-colors.png" alt="Clario Cloud Colors">
+  </div>
+</div>
+
+<div class="right-section">
+  <div class="subtitle">Modify</div>
+  <div class="description">Rotate the direction of the pattern and delete tiles.</div>
+  <div class="colors">
+    <img class="tile-type" src="/assets/images/clario_cloud/clario-cloud-pattern-direction.png" alt="Clario Cloud Colors">
+  </div>
+</div>
