--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -154,6 +154,15 @@
         </div>
       </div>
 
+      <div class="options-footer" class="left-section">
+        <span appStyledButton='primary-right'>
+          <button type="submit" (click)='startDesigning()' class="start-designing" [disabled]="!validateOptions()">Start
+            designing</button>
+        </span>
+        <span appStyledButton='secondary-left' *ngIf="showQuantityBtn">
+          <button (click)="goToQty()" class="go-to-quantity">Order by quantity</button>
+        </span>
+      </div>
 
     </div>
     <!-- END LEFT COLUMN -->
@@ -173,7 +182,7 @@
     </div>
     <!-- END RIGHT COLUMN -->
   </div>
-  <div class="options-footer">
+  <!-- <div class="options-footer">
     <span appStyledButton='primary-right'>
       <button type="submit" (click)='startDesigning()' class="start-designing" [disabled]="!validateOptions()">Start
         designing</button>
@@ -181,5 +190,5 @@
     <span appStyledButton='secondary-left' *ngIf="showQuantityBtn">
       <button (click)="goToQty()" class="go-to-quantity">Order by quantity</button>
     </span>
-  </div>
+  </div> -->
 </div>
