--- a/src/app/design/right-components/design-modify/design-modify.component.html
+++ b/src/app/design/right-components/design-modify/design-modify.component.html
@@ -30,7 +30,7 @@
       <span class="tool">
         <img src="/assets/icons/tools/rotate.png" alt="Rotate Cloud Pattern Direction">
       </span>
-      <span class="description-text wrap-text">Rotate Pattern Direction</span>
+      <span class="description-text wrap-text rotate-text">Rotate Pattern Direction</span>
     </span>
   </div>
 </mat-expansion-panel>
