--- a/src/app/options/options-right-clario-cloud/options-right-clario-cloud.component.html
+++ b/src/app/options/options-right-clario-cloud/options-right-clario-cloud.component.html
@@ -9,7 +9,7 @@
 
 <div class="right-section">
   <div class="subtitle">Design</div>
-  <div class="description">Choose your cloud and color.</div>
+  <div class="description">Design your cloud shape and choose tile colors.</div>
   <div class="colors">
     <img class="tile-type" src="/assets/images/clario_cloud/clario-cloud-colors.png" alt="Clario Cloud Colors">
   </div>
@@ -18,7 +18,10 @@
 <div class="right-section">
   <div class="subtitle">Modify</div>
   <div class="description">Rotate the direction of the pattern and delete tiles.</div>
-  <div class="colors">
+  <div class="controls">
+    <img class="tile-type" src="/assets/images/clario_cloud/clario-cloud-design-options.png" alt="Clario Cloud Design Options">
+  </div>
+  <div class="modify">
     <img class="tile-type" src="/assets/images/clario_cloud/clario-cloud-pattern-direction.png" alt="Clario Cloud Colors">
   </div>
 </div>
