--- a/src/app/canvas-grids/canvas-grids.component.html
+++ b/src/app/canvas-grids/canvas-grids.component.html
@@ -11,6 +11,5 @@
 <div class="guide horizontal" [style.top.px]="guideTop"></div>
 <div class="guide vertical" [style.left.px]="guideLeft"></div>
 
-<app-velo-grid *ngIf="gridType === 'velo'" (mousemove)="moveGuide($event)"></app-velo-grid>
-<app-clario-cloud-grid *ngIf="gridType === 'clario-cloud'" (mousemove)="moveGuide($event)"></app-clario-cloud-grid>
-<app-swoon-grid *ngIf="gridType === 'hushSwoon'" (mousemove)="moveGuide($event)"></app-swoon-grid>
+<app-velo-grid *ngIf="feature.feature_type === 'velo'" (mousemove)="moveGuide($event)"></app-velo-grid>
+<app-clario-cloud-grid *ngIf="feature.feature_type === 'clario-cloud'" (mousemove)="moveGuide($event)"></app-clario-cloud-grid>
