--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -60,8 +60,16 @@
       <div class="totals">
         <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond' && feature.showPricing">
           <div class="total-row">
-            <span class="sub-header">List:</span>
-            <span  class="total">{{feature.list_price | currency:'USD'}}</span>
+            <span class="sub-header">Design List:</span>
+            <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
+          </div>
+          <div class="total-row">
+            <span class="sub-header">Quantity:</span>
+            <span class="total">{{feature.quantity}}</span>
+          </div>
+          <div class="total-row">
+            <span class="sub-header">Total List:</span>
+            <span class="total">{{feature.list_price | currency:'USD'}}</span>
           </div>
           <div class="total-row">
             <span class="sub-header">Discount:</span>
@@ -78,6 +86,14 @@
           </div>
         </span>
         <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && feature.showPricing" >
+            <div class="total-row">
+              <span class="sub-header">Design List:</span>
+              <span class="total">{{seeyond.list_price / seeyond.quantity | currency:'USD'}}</span>
+            </div>
+            <div class="total-row">
+              <span class="sub-header">Quantity:</span>
+              <span class="total">{{seeyond.quantity}}</span>
+            </div>
           <div class="total-row">
             <span class="sub-header">List:</span>
             <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
