--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -41,8 +41,16 @@
         <div class="bottom-row" *ngIf="feature.showPricing">
           <div class="details-header">Est. Total</div>
           <div id="estimated-totals" class="info-section">
+          <div class="total-row">
+              <span>Design List:</span>
+              <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
+            </div>
+            <div class="total-row">
+              <span>Quantity:</span>
+              <span class="total">{{feature.quantity}}</span>
+            </div>
             <div class="info-line">
-              <span>List:</span>
+              <span>List Total:</span>
               <span  class="total">{{feature.list_price | currency:'USD'}}</span>
             </div>
             <div class="info-line">
