--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -43,7 +43,15 @@
             <div class="details-header">Est. Total</div>
             <div id="estimated-totals" class="info-section" *ngIf="feature.showPricing">
               <div class="info-line">
-                <span>List:</span>
+                <span>Design List:</span>
+                <span class="total">{{seeyond.list_price / seeyond.quantity | currency:'USD'}}</span>
+              </div>
+              <div class="info-line">
+                <span>Quantity:</span>
+                <span class="total">{{seeyond.quantity}}</span>
+              </div>
+              <div class="info-line">
+                <span>Total List:</span>
                 <span class="total">{{seeyond.list_price | currency:'USD'}}</span>
               </div>
               <div class="info-line">
