--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -175,7 +175,15 @@
           </span>
           <span class="est-totals" *ngIf="feature.showPricing">
             <div class="total-row">
-              <span class="sub-header">List:</span>
+              <span class="sub-header">Design List:</span>
+              <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
+            </div>
+            <div class="total-row">
+              <span class="sub-header">Quantity:</span>
+              <span class="total">{{feature.quantity}}</span>
+            </div>
+            <div class="total-row">
+              <span class="sub-header">Total List:</span>
               <span class="total">{{feature.list_price | currency:'USD'}}</span>
             </div>
             <div class="total-row">
