--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -59,11 +59,11 @@
     <div class="bottom-section">
       <div class="totals">
         <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond' && feature.showPricing">
-          <div class="total-row">
+            <div class="total-row" *ngIf="feature.quantity > 1">
             <span class="sub-header">Design List:</span>
             <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
           </div>
-          <div class="total-row">
+          <div class="total-row" *ngIf="feature.quantity > 1">
             <span class="sub-header">Quantity:</span>
             <span class="total">{{feature.quantity}}</span>
           </div>
@@ -86,11 +86,11 @@
           </div>
         </span>
         <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && feature.showPricing" >
-            <div class="total-row">
+            <div class="total-row" *ngIf="seeyond.quantity > 1">
               <span class="sub-header">Design List:</span>
               <span class="total">{{seeyond.list_price / seeyond.quantity | currency:'USD'}}</span>
             </div>
-            <div class="total-row">
+            <div class="total-row" *ngIf="seeyond.quantity > 1">
               <span class="sub-header">Quantity:</span>
               <span class="total">{{seeyond.quantity}}</span>
             </div>
