--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -41,32 +41,32 @@
         <div class="bottom-row" *ngIf="feature.showPricing">
           <div class="details-header">Est. Total</div>
           <div id="estimated-totals" class="info-section">
-          <div class="total-row">
-              <span>Design List:</span>
-              <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
-            </div>
-            <div class="total-row">
-              <span>Quantity:</span>
-              <span class="total">{{feature.quantity}}</span>
-            </div>
-            <div class="info-line">
-              <span>List Total:</span>
-              <span  class="total">{{feature.list_price | currency:'USD'}}</span>
-            </div>
-            <div class="info-line">
-              <span>Discount:</span>
-              <span class="total">{{feature.discount_terms_string}}</span>
-            </div>
-            <div class="info-line">
-              <span>Discount amount:</span>
-              <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
-            </div>
-            <hr>
-            <div class="info-line net">
-              <span class="details-header">Net (USD):</span>
-              <span class="total details-header">{{feature.net_price | currency:'USD'}}</span>
-            </div>
-            <div class="description-text">Taxes, shipping & handling not included</div>
+          <div class="info-line" *ngIf="feature.quantity > 1">
+            <span>Design List:</span>
+            <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
+          </div>
+          <div class="info-line" *ngIf="feature.quantity > 1">
+            <span>Quantity:</span>
+            <span class="total">{{feature.quantity}}</span>
+          </div>
+          <div class="info-line">
+            <span>List Total:</span>
+            <span  class="total">{{feature.list_price | currency:'USD'}}</span>
+          </div>
+          <div class="info-line">
+            <span>Discount:</span>
+            <span class="total">{{feature.discount_terms_string}}</span>
+          </div>
+          <div class="info-line">
+            <span>Discount amount:</span>
+            <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
+          </div>
+          <hr>
+          <div class="info-line net">
+            <span class="details-header">Net (USD):</span>
+            <span class="total details-header">{{feature.net_price | currency:'USD'}}</span>
+          </div>
+          <div class="description-text">Taxes, shipping & handling not included</div>
           </div>
         </div>
       </div>
