--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -42,11 +42,11 @@
           <div class="bottom-row">
             <div class="details-header">Est. Total</div>
             <div id="estimated-totals" class="info-section" *ngIf="feature.showPricing">
-              <div class="info-line">
+              <div class="info-line" *ngIf="seeyond.quantity > 1">
                 <span>Design List:</span>
                 <span class="total">{{seeyond.list_price / seeyond.quantity | currency:'USD'}}</span>
               </div>
-              <div class="info-line">
+              <div class="info-line" *ngIf="seeyond.quantity > 1">
                 <span>Quantity:</span>
                 <span class="total">{{seeyond.quantity}}</span>
               </div>
