--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -174,11 +174,11 @@
             <button (click)="viewDetails()">View Details</button>
           </span>
           <span class="est-totals" *ngIf="feature.showPricing">
-            <div class="total-row">
+            <div class="total-row" *ngIf="feature.quantity > 1">
               <span class="sub-header">Design List:</span>
               <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
             </div>
-            <div class="total-row">
+            <div class="total-row" *ngIf="feature.quantity > 1">
               <span class="sub-header">Quantity:</span>
               <span class="total">{{feature.quantity}}</span>
             </div>
