--- a/src/app/quote-dialog/quote-dialog.component.html
+++ b/src/app/quote-dialog/quote-dialog.component.html
@@ -62,11 +62,11 @@
           </div>
           <div *ngIf="feature.feature_type !=='seeyond' && feature.showPricing" id="estimated-totals"
             class="info-section">
-            <div class="info-line">
+            <div class="info-line" *ngIf="feature.quantity > 1">
               <span class="sub-header">Design List:</span>
               <span class="total">{{feature.list_price / feature.quantity | currency:'USD'}}</span>
             </div>
-            <div class="info-line">
+            <div class="info-line" *ngIf="feature.quantity > 1">
               <span class="sub-header">Quantity:</span>
               <span class="total">{{feature.quantity}}</span>
             </div>
@@ -95,11 +95,11 @@
               <span class="sub-header">Design List:</span>
               <span class="total">{{seeyond.list_price / seeyond.quantity | currency:'USD'}}</span>
             </div>
-            <div class="info-line">
+            <div class="info-line" *ngIf="seeyond.quantity > 1">
               <span class="sub-header">Quantity:</span>
               <span class="total">{{seeyond.quantity}}</span>
             </div>
-            <div class="info-line">
+            <div class="info-line" *ngIf="seeyond.quantity > 1">
               <span class="sub-header">Total List:</span>
               <span class="total">{{seeyond.list_price | currency:'USD'}}</span>
             </div>
