Adjustments to visualization for clario-cloud per engingeering

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -99,11 +99,7 @@
     </div>
   </div>
   <div class="bottom-section">
-    <div class="left-side">
-      <!-- <div class="details-header">TODO: WHAT DOES THIS LOOK LIKE?</div>  -->
-      <!-- TODO: IS THE TILE USAGE COMPONENT? -->
-    </div>
-    <div class="right-side">
+    <div class="design-img">
       <div class="details-header">Design</div>
       <img class="grid-guide img-responsive" src="{{feature.design_data_url}}" alt="Grid Guide Image">
     </div>
