adds the view type to clarify point of view for the user

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -100,7 +100,7 @@
   </div>
   <div class="bottom-section">
     <div class="design-img">
-      <div class="details-header">Design</div>
+      <div class="details-header">{{imgHeaderTitle}}</div>
       <img class="grid-guide img-responsive" src="{{feature.design_data_url}}" alt="Grid Guide Image">
     </div>
   </div>
