--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -48,6 +48,9 @@
       <span class="quantities-sold">
         <span class="sub-header">{{seeyond.dimensionsString}}</span>
       </span>
+      <span *ngIf="!!seeyond.isDuplicating" class="sub-header">
+        Duplicating Seeyond ID {{seeyond.id}}
+      </span>
     </div>
   </div>
   <div class="right-side">
@@ -116,16 +119,16 @@
           </div>
         </span>
 
-        <span class="details-btn" *ngIf="feature.feature_type !== 'seeyond'">
-          <span appStyledButton='secondary-left' *ngIf="feature.quoted">
-            <button (click)="viewDetails()">Details</button>
+        <div class="details-btn" *ngIf="(feature.feature_type !== 'seeyond' && feature.quoted) || (feature.feature_type === 'seeyond' && seeyond.quoted)">
+          <span class="details-btn">
+            <span appStyledButton='primary-right'>
+              <button (click)="viewDetails()">Details</button>
+            </span>
+            <span appStyledButton='secondary-left'>
+              <button (click)="duplicateDesign()">Duplicate Design</button>
+            </span>
           </span>
-        </span>
-        <span class="details-btn" *ngIf="feature.feature_type === 'seeyond'">
-          <span appStyledButton='secondary-left' *ngIf="seeyond.quoted">
-            <button (click)="viewDetails()">Details</button>
-          </span>
-        </span>
+        </div>
       </div>
 
       <div class="request-quote" *ngIf="feature.feature_type !== 'seeyond'">
